[tool.poetry]
name = "gemma"
version = "0.1.0"
description = ""
authors = ["roo7690 <roosevelt@roo7690.me>"]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "2.1.0"
python-dotenv = "^1.0.1"
transformers = "^4.46.2"
absl-py = "^2.1.0"
ml-dtypes = "^0.5.0"
huggingface-hub = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
