[tool.poetry]
name = "gemma"
version = "0.1.0"
description = ""
authors = ["roo7690 <roosevelt@roo7690.me>"]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
python-dotenv = "^1.0.1"
huggingface-hub = "^0.26.2"
accelerate = "^1.1.1"
bitsandbytes = "^0.44.1"
safetensors = "^0.4.5"
transformers = {extras = ["torch"], version = "^4.46.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
